--- a/Presentation/press/deck.mdx
+++ b/Presentation/press/deck.mdx
@@ -113,8 +113,6 @@ export const theme = {
 # Fråga:
 ### Hur många har programmerat tidigare?
 
-#### Poll: Programmering
-
 ---
 
 # Fråga:
@@ -124,7 +122,7 @@ export const theme = {
 
 <img src={commonLang} style={{"height": "70%"}}/>
 
-#### source: https://insights.stackoverflow.com/survey/2020#technology
+#### source: https://insights.stackoverflow.com/survey/2021#technology
 
 ---
 
@@ -542,7 +540,8 @@ Använd postman för att göra ett API anrop
 
 ---
 
-# Poll: Git
+# Git
+### Hur många vet vad Git är?
 
 ---
 
@@ -600,9 +599,8 @@ Bra exempel på en modern event-driven arkitektur
 
 ## Installation Home Assistant
 
-Guide: https://github.com/voxic/Nackademin/blob/master/Dag1/Installation%20Home%20Assistant.md
+Guide: https://github.com/voxic/Nackademin_IoT22_Intro/blob/IOT22/Presentation/Installation%20Home%20Assistant.md
 
-<img src={qr} style={{ "width" : "10%" }} />
 
 ---
 
@@ -610,9 +608,8 @@ Guide: https://github.com/voxic/Nackademin/blob/master/Dag1/Installation%20Home%
 
 ## Uppsättning Arduino Sensor
 
-Guide: https://github.com/voxic/Nackademin/blob/master/Dag1/Upps%C3%A4ttning%20Arduino.md
+Guide: https://github.com/voxic/Nackademin_IoT22_Intro/blob/IOT22/Presentation/Upps%C3%A4ttning%20Arduino.md
 
-<img src={arduQR} style={{ "width" : "10%" }} />
 
 ---
 
@@ -620,9 +617,8 @@ Guide: https://github.com/voxic/Nackademin/blob/master/Dag1/Upps%C3%A4ttning%20A
 
 ## Arduino sensor till Home Assistant
 
-Guide: https://github.com/voxic/Nackademin/blob/master/Dag1/Arduino%20till%20Home%20Assistant.md
+Guide: https://github.com/voxic/Nackademin_IoT22_Intro/blob/IOT22/Presentation/Arduino%20till%20Home%20Assistant.md
 
-<img src={haQR} style={{ "width" : "10%" }} />
 
 ---
 
